添加插件配置接口，更新包信息，完善文档，新增文件管理工具类

--- a/package.json
+++ b/package.json
@@ -2,20 +2,29 @@
   "name": "koishi-plugin-content",
   "description": "调用 API 返回随机内容或发送本地随机内容",
   "version": "0.0.1",
+  "contributors": [
+    "Yis_Rime <yis_rime@outlook.com>"
+  ],
+  "homepage": "https://github.com/YisRime/koishi-plugin-content",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YisRime/koishi-plugin-content.git"
+  },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
     "lib",
     "dist"
   ],
-  "license": "MIT",
-  "scripts": {},
+  "license": "GPL-3.0",
   "keywords": [
     "chatbot",
     "koishi",
-    "plugin"
+    "plugin",
+    "content",
+    "image",
+    "text"
   ],
-  "devDependencies": {},
   "peerDependencies": {
     "koishi": "^4.18.7"
   }
